<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.baitapandroid.apptuvung.util.Settings" />

        <import type="android.view.View" />

        <variable
            name="settings"
            type="com.baitapandroid.apptuvung.util.Settings" />

        <variable
            name="success"
            type="boolean" />

        <variable
            name="time"
            type="String" />

        <variable
            name="hearts"
            type="int" />

        <variable
            name="progress"
            type="int" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/gameFinishedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@{success ? @string/game_finished_success_text : @string/game_finished_failure_text}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/game_finished_success_text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?attr/actionBarDivider"
                android:dividerPadding="20dp"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/game_finished_time_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/time" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_time" />

                        <TextView
                            android:id="@+id/textFinishedTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{time}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            tools:text="1:23" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/game_finished_hearts_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconHeart"
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginEnd="5dp"
                        android:src="@{hearts == 0 ? @drawable/heart_broken : @drawable/heart_filled}"
                        tools:src="@drawable/heart_filled" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_hearts" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textPerfection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/a_slash_b(hearts, settings.getMaxHearts())}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="5 / 5" />

                            <TextView
                                android:id="@+id/textIsPerfect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/rounded_corner_15dp"
                                android:backgroundTint="@color/heart_500"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="5dp"
                                android:text="@string/game_hearts_full"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:visibility="@{hearts == settings.getMaxHearts() ? View.VISIBLE : View.GONE}" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/game_finished_progress_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/check" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_progress" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start|center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textProgress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/a_slash_b(progress, settings.getMaxProgress())}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="10 / 10" />

                            <TextView
                                android:id="@+id/textIsFinished"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/rounded_corner_15dp"
                                android:backgroundTint="@color/heart_500"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="5dp"
                                android:text="@string/game_progress_full"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:visibility="@{progress == settings.getMaxProgress() ? View.VISIBLE : View.GONE}" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>